ClientApp/src/index.css
 body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;

 }

 html {
   height: 100%;
 }

 .body {

   display: flex;
  min-height: 100vh;
  flex-direction: column;
 }
 .content {flex: 1}


 /* .menu {
  background-color: #2f3542 !important;
 } */

 .sub-menu {
  background-color: rgba(30, 144, 255,1.0) !important;
}

 .product-card {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
   border-left-color: transparent !important;
   border-right-color: transparent !important;
   border-top-color: transparent !important;
   border-bottom-color: transparent !important;
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
   border-radius: 0.75rem !important;

 }

 .product-card:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22) !important;
 }

 /* Bob */
 @-webkit-keyframes hvr-bob {
   0% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }

   50% {
     -webkit-transform: translateY(-4px);
     transform: translateY(-4px);
   }

   100% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
 }

 @keyframes hvr-bob {
   0% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }

   50% {
     -webkit-transform: translateY(-4px);
     transform: translateY(-4px);
   }

   100% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
 }

 @-webkit-keyframes hvr-bob-float {
   100% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
 }

 @keyframes hvr-bob-float {
   100% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
 }

 .hvr-bob {
  -webkit-transform: scale(1.1) rotate(4deg);
  transform: scale(1) rotate(4deg);
 }


 /* Pulse Grow */
 @-webkit-keyframes hvr-pulse-grow {
   to {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
   }
 }

 @keyframes hvr-pulse-grow {
   to {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
   }
 }

 .hvr-pulse-grow {
   -webkit-animation-name: hvr-pulse-grow;
   animation-name: hvr-pulse-grow;
   -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
   -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }

 /* Pop */
 @-webkit-keyframes hvr-pop {
   50% {
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
   }
 }

 @keyframes hvr-pop {
   50% {
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
   }
 }

 .hvr-pop {
   -webkit-animation-name: hvr-pop;
   animation-name: hvr-pop;
   -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
   -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }

.brand {
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.brand-hover {
  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
  filter: grayscale(0%);
  transform: scale(1.2);
}

.AnyClassForContainer {
  position: fixed;
  right: -160px;
  bottom: 10px;
  transition: right 0.25s;
  cursor: pointer;
}

.AnyClassForTransition {
  right: 20px;
}

